--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "author": "up1",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
