--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,4 +7,4 @@ RUN npm run build
 
 FROM nginx:alpine
 COPY --from=builder /src/build/ /usr/share/nginx/html/
-# COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
