--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -5,10 +5,12 @@ services:
 
   mongo:
     build: ./database
+    user: "0:0"
     environment: 
       MONGO_INITDB_DATABASE: mongo-test
 
   frontend:
     build: ./frontend
+    user: "0:0"
     ports:
       - 8888:80
