--- a/docker-compose-seed-data.yml
+++ b/docker-compose-seed-data.yml
@@ -2,9 +2,11 @@ version: "3"
 services:
   backend:
     build: ./backend
+    user: "0:0"
     ports:
       - 3000:3000
   mongo:
     build: ./database
+    user: "0:0"
     environment: 
       MONGO_INITDB_DATABASE: mongo-test
