--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./server.js",
+    "test": "jest --coverage --detectOpenHandles"
   },
   "author": "up1",
   "license": "ISC",
@@ -15,6 +16,8 @@
     "sonarqube-scanner": "^2.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
