--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon ./server.js",
-    "test": "jest --coverage --detectOpenHandles"
+    "test": "jest --coverage"
   },
   "author": "up1",
   "license": "ISC",
@@ -17,7 +17,21 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
+    "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testResultsProcessor": "jest-sonar-reporter"
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
   }
 }
