--- a/k8s/mongo_deployment.yml
+++ b/k8s/mongo_deployment.yml
@@ -16,6 +16,9 @@ spec:
           image: somkiat/mongo:0.1
           ports:
             - containerPort: 27017
+          env:
+            - name: MONGO_INITDB_DATABASE
+              value: mongo-test
           volumeMounts:
             - name: storage
               mountPath: /data/db
