--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -2,20 +2,21 @@ version: "3"
 
 services:
   backend:
-    build: ./backend
-    # image: pirawat/backend:0.1
-    # ports:
-    #   - 3000:3000
+    # build: ./backend
+    image: workshop-docker-k8s-helm_backend
+    ports:
+      - 3000:3000
 
   frontend: 
-    build: ./frontend
-    # image: pirawat/frontend:0.1
+    # build: ./frontend
+    image: workshop-docker-k8s-helm_frontend
     ports:
       - 9999:80
+
   mongo:
-    build: ./database
+    # build: ./database
     image: my_mongo:1.0
-    container_name: mongo
+    # container_name: mongo
     environment:
       MONGO_INITDB_DATABASE: mongo-test    
     # volumes:
