--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.11.14",
-    "sonarqube-scanner": "^2.8.0"
+    "mongoose": "^5.11.14"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.7",
+    "sonarqube-scanner": "^2.8.0",
     "supertest": "^6.1.3"
   },
   "jest": {
