--- a/docker-compose-seed-data.yml
+++ b/docker-compose-seed-data.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 3000:3000
   mongo:
-    build: ./database
+    build: ./mongodb
     user: "0:0"
     environment: 
       MONGO_INITDB_DATABASE: mongo-test
